# Kaggle_NLP_with_disaster_tweets

./: NLP_tweet.ipynb  NLP_tweet_Transformer.ipynb  README.md  pyproject.toml
results/: submission.csv
